<resources>
    <string name="app_name">HyperPS3</string>
	<string name="game_data_manager">Game Data Manager</string>
	<string name="game_data_manager_desc">00000001</string>
	<string name="import_game_data">Import Game Data</string>
	<string name="export_game_data">Export Game Data</string>
	<string name="import_game_data_done">Game data import completed</string>
	<string name="import_game_data_failed">Game data import failed</string>
	<string name="export_game_data_done">Game data export completed</string>
	<string name="export_game_data_failed">Game data export failed</string>
	<string name="user_data_manager">User Data Manager</string>
	<string name="ppu_cache_manager">PPU Cache Manager</string>
	<string name="import_ppu_cache">Import PPU Cache</string>
	<string name="export_ppu_cache">Export PPU Cache</string>
	<string name="import_ppu_cache_done">PPU cache import completed</string>
	<string name="import_ppu_cache_failed">PPU cache import failed</string>
	<string name="iso_dir_manager">ISO Directory Manager</string>
	<string name="compatibility_table">Game Compatibility Table</string>
	<string name="driver_manager">Driver Manager</string>
	<string name="add_a_iso_dir">Add an iso directory</string>
	<string name="download_compatibility_data_sheet">Download Compatibility Data Sheet</string>
	<string name="reset_search">Reset Search</string>
	<string name="save_to">Save to %s</string>
	<string name="remove_directory">Remove directory</string>
	<string name="downloading">Downloading...</string>
	<string name="download_success">Download successful</string>
	<string name="download_failed">Download failed</string>
	<string name="information">Information</string>
	<string name="creating_ppu_cache">Creating PPU cache</string>
	<string name="please_enter_a_search_value">Please enter a search value</string>
	<string name="search_value_cannot_be_greater_than">Search value cannot be greater than</string>
	<string name="search_results_0_matches">Search results: 0 matches</string>
	<string name="please_select_the_address_to_write_to_first">Please select the address to write to first</string>
	<string name="no_matching_memory_address_found">No matching memory address found</string>
	<string name="search_results_n_matches">Search results: %d matches</string>
	<string name="please_enter_a_valid_number">Please enter a valid number (hexadecimal)</string>
	<string name="search_failed">Search failed: </string>
	<string name="address_selected">Address selected: </string>
	<string name="please_select_the_memory_address_to_write_to_first">Please select the memory address to write to first</string>
	<string name="please_enter_the_value_to_write">Please enter the value to write</string>
	<string name="the_value_to_be_written_cannot_be_greater_than">The value to be written cannot be greater than</string>
	<string name="write_successful">Write successful</string>
	<string name="write_failed">Write failed</string>
	<string name="memory_search">Memory Search</string>
	<string name="search_type_hint">Search Type:</string>
	<string name="search_value_hint">Search Value:</string>
	<string name="please_enter_the_value_to_search">Please enter the value to search</string>
	<string name="start_search">Start Search</string>
	<string name="search_results_list_hint">Search results list</string>
	<string name="memory_write">Memory Write</string>
	<string name="enter_the_value_to_write">Enter the value to write</string>
	<string name="show_trophy_info">Show Trophy Info</string>
	<string name="create_ppu_cache">Create PPU Cache</string>
	<string name="delete_ppu_cache">Delete PPU Cache</string>
	<string name="delete_spu_cache">Delete SPU Cache</string>
	<string name="no_found_trophy_info">No Found Trophy Info</string>
	<string name="open_source_licenses">Open Source Licenses</string>
	<string name="buy_premium">Buy aPS3e Premium</string>
	<string name="device_unsupport_vulkan_msg">Your device does not support Vulkan and cannot meet the minimum requirements to run this application, please exit.</string>
	<string name="use_cores_ppu">Use Cores(PPU)</string>
	<string name="use_cores_spu">Use Cores(SPU)</string>
	<string name="use_cores_rsx">Use Cores(RSX)</string>
	<string name="emulator_settings_core_thread_affinity_mask">Thread Affinity Mask</string>
	<string name="create_shortcut">Create Shortcut</string>
	<string name="loading">Loading...</string>
	<string name="resolution_not_support">Resolution or aspect ratio is not supported
The current game only supports:
%s

Please modify with the following settings:
%s
%s
</string>
	<string name="show_game_info">Show Game Info</string>
	<string name="quick_start_page">Quick Start Page</string>
	<string name="prev_step">Prev Step</string>
	<string name="next_step">Next Step</string>
	<string name="finish">Finish</string>
	<string name="welcome">Welcome</string>
	<string name="welcome_content">Welcome to %s!</string>
	<string name="welcome_content2">With just a few simple steps, you re ready to start playing, click on " %s " to get started.</string>
	<string name="install_ps3_firmware_hiht_content">To play the game, you must install the PS3 firmware (PS3UPDAT.PUP). Please select the firmware file.</string>
	<string name="ps3_firmware_installed">Firmware Installed</string>
	<string name="select_ps3_firmware">Select Firmware(PS3UPDAT.PUP)</string>
	<string name="firmware_not_install">firmware not install</string>
	<string name="select_ps3_iso_dir_hiht_content">Please specify the PS3 ISO directory, the APP will automatically scan to retrieve valid games, you can also skip this step and install the .pkg file directly.</string>
	<string name="ps3_iso_dir_is_set">PS3 ISO directory to set</string>
	<string name="font_select_hiht_content">Please select a font file (*.ttf, *.ttc, *.otf) to install, or you can use a font from the PS3 firmware (words may be missing).</string>
	<string name="custom_font_path_prefix">Font Path: </string>
	<string name="select_gpu_driver_hiht_content">Please select a GPU driver, you can also skip this step (the game may run with errors).</string>
	<string name="custom_gpu_driver_path_prefix">GPU Driver Path: </string>
	<string name="modify_config_hiht_content">The emulator will automatically select the most suitable configuration, but some configurations may cause issues on your device. You can modify them later in the settings.</string>
	<string name="msg_processing">Processing...</string>
	<string name="msg_failed">Failed!</string>
	<string name="emulator_settings_video_vulkan_debug">Debug</string>
	<string name="emulator_settings_miscellaneous_memory_debug_overlay">Memory Debug overlay</string>
	<string name="vibrator_duration">Virbrator Duration</string>
	<string name="enable_vibrator">Enable Vibrator</string>
	<string name="dynamic_joystick">Dynamic Joystick</string>
	<string name="disable">Disable</string>
	<string name="disable_virtual_keyboard">Disable the virtual keyboard</string>
	<string name="joystick">Joystick</string>
	<string name="dpad">Dpad</string>
	<string name="button">Button</string>
	<string name="lr">LR</string>
	<string name="start_select">Start/Select</string>
	<string name="enable_log">Enable Log</string>
	<string name="use_global_config">Use Global Config</string>
	<string name="edit_custom_config">Edit Custom Config</string>
	<string name="clear">Clear</string>
	<string name="press_a_key">Press any key to continue...</string>
	<string name="game_list_loading">The game list is loading...</string>
	<string name="undecrypted_game">Running undecrypted games is not supported at this time</string>
	<string name="delete_game_data">Delete Game Data</string>
	<string name="delete_hdd0_install_data">Delete hdd0 Install Data</string>
	<string name="delete_game_and_data">Delete Game and Data</string>
	<string name="delete_shaders_cache">Delete Shaders Cache</string>
	<string name="set_iso_dir">Set (*.iso) Directory</string>
	<string name="device_info">Device Info</string>
	<string name="reset_as_default">Reset as Default</string>
	<string name="save_and_quit">Save &amp; Quit</string>
	<string name="scale_rate">Scale Rate</string>
	<string name="open_file_manager">Open File Manager</string>
	<string name="installing_firmware">Installing Firmware...</string>
	<string name="refresh_list">Refresh List</string>
	<string name="select_game">Select Game</string>
	<string name="install_firmware">Install Firmware</string>
	<string name="install_game">Install EDAT/RAP/PKG</string>
	<string name="installing_game">Installing Game...</string>
	<string name="about">About</string>
	<string name="quit">Quit</string>
	<string name="update_log">Update Log</string>
	<string name="empty_game_list">The list of games is empty, please add games by installing pkg or setting the *.iso directory</string>
	<string name="delete">Delete</string>
	<string name="settings">Settings</string>
	<string name="gratitude">Gratitude</string>
	<string name="gratitude_content">Thanks Ruban for all the ICONS\n\n
		Thanks to SRC267 (Sting) for managing reddit/discord\n\n
		Thanks to 妖妖 for test\n\n
		Thanks to 再见某人 for donating GPD XP, which has been a great help in the testing process.\n\n
		Thanks to 再见某人 for donating the development equipment, which has been instrumental in advancing the project.\n\n
		Thanks to the following people who provided financial support for this project (Initial stage,sort by date):\n\n</string>
	<string name="gratitude_content2">
		Based on the RPCS3 transplantation optimization, thanks to all the participants of the RPCS3 project\n\n
Translation qwen3
	</string>
	<string name="key_mappers">Key Mappers</string>
	<string name="virtual_pad_edit">VirtualPadEdit</string>
	<string name="left">left</string>
	<string name="up">up</string>
	<string name="right">right</string>
	<string name="down">down</string>
	<string name="square">square</string>
	<string name="cross">cross</string>
	<string name="circle">circle</string>
	<string name="triangle">triangle</string>
	<string name="l1">L1</string>
	<string name="l2">L2</string>
	<string name="l3">L3</string>
	<string name="r1">R1</string>
	<string name="r2">R2</string>
	<string name="r3">R3</string>
	<string name="start">start</string>
	<string name="select">select</string>
	<string name="ps">PS</string>
	<string name="emulator_settings_video_vulkan_custom_driver_library_path_dialog_title">Select a Custom Driver</string>
	<string name="emulator_settings_video_vulkan_custom_driver_library_path_dialog_add_hint">Add Custom Driver(*.zip, *.so)</string>
	<string name="emulator_settings_miscellaneous_custom_font_file_path_dialog_title">Select a Custom Font</string>
	<string name="emulator_settings_miscellaneous_custom_font_file_path_dialog_add_hint">Add Custom Font(*.ttf, *.ttc, *.otf)</string>
	<string name="emulator_settings_core">Core</string>
	<string name="emulator_settings_core_ppu_decoder">PPU Decoder</string>
	<string-array name="core_ppu_decoder_entries">
		<item>Interpreter (static)</item>
		<item>Recompiler (LLVM)</item>
	</string-array>
	<string name="emulator_settings_core_ppu_threads">PPU Threads</string>
	<string name="emulator_settings_core_ppu_debug">PPU Debug</string>
	<string name="emulator_settings_core_ppu_calling_history">PPU Calling History</string>
	<string name="emulator_settings_core_save_llvm_logs">Save LLVM logs</string>
	<string name="emulator_settings_core_use_llvm_cpu">Use LLVM CPU</string>
	<string name="emulator_settings_core_max_llvm_compile_threads">Max LLVM Compile Threads</string>
	<string name="emulator_settings_core_ppu_llvm_greedy_mode">PPU LLVM Greedy Mode</string>
	<string name="emulator_settings_core_llvm_precompilation">LLVM Precompilation</string>
	<string name="emulator_settings_core_thread_scheduler_mode">Thread Scheduler Mode</string>
	<string name="emulator_settings_video_vulkan_use_custom_driver">Use Custom Driver</string>
</resources>