<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--摇杆-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/joystick"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/virtual_pad_joystick_scale_hint" />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="20"
        android:max="300"
        android:progress="100"
        android:id="@+id/virtual_pad_joystick_scale" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/dynamic_joystick"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/virtual_pad_dynamic_joystick">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/disable"
                android:id="@+id/virtual_pad_dynamic_joystick_disable"
                android:checked="true"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:minHeight="48dp"
                android:text="@string/left"
                android:id="@+id/virtual_pad_dynamic_joystick_use_left"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:minHeight="48dp"
                android:text="@string/right"
                android:id="@+id/virtual_pad_dynamic_joystick_use_right"/>
        </RadioGroup>


        <!--方向键-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dpad"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/virtual_pad_dpad_scale_hint" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="20"
            android:max="300"
            android:progress="100"
            android:id="@+id/virtual_pad_dpad_scale" />

        <!--ABXY-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/button"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/virtual_pad_button_scale_hint" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="20"
            android:max="300"
            android:progress="100"
            android:id="@+id/virtual_pad_button_scale" />
        <!--开始/选择-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/start_select"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/virtual_pad_ss_scale_hint" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="20"
            android:max="300"
            android:progress="100"
            android:id="@+id/virtual_pad_ss_scale" />

        <!--LR-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lr"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/virtual_pad_lr_scale_hint" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="20"
            android:max="300"
            android:progress="100"
            android:id="@+id/virtual_pad_lr_scale" />


        <!--PS-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ps"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/virtual_pad_ps_scale_hint" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="20"
            android:max="300"
            android:progress="100"
            android:id="@+id/virtual_pad_ps_scale" />

        <CheckBox
            android:id="@+id/virtual_pad_disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_virtual_keyboard" />
    <Button
        android:id="@+id/virtual_pad_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_as_default" />
    <Button
        android:id="@+id/virtual_pad_save_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_and_quit" />

    </LinearLayout>

</ScrollView>